// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`squircle.css utilities > squircle-b-md snapshot 1`] = `
".squircle-b-md {
    border-bottom-left-radius: var(--radius-md);
    border-bottom-right-radius: var(--radius-md);
    @supports (corner-shape: superellipse(2)) {
      --squircle-r: calc(var(--radius-md) * (1 - pow(2, -0.5)) / (1 - pow(2, -1 * pow(2, -1 * var(--squircle-amt, 2)))));
      border-bottom-left-radius: var(--squircle-r);
      border-bottom-right-radius: var(--squircle-r);
      corner-bottom-left-shape: superellipse(var(--squircle-amt, 2));
      corner-bottom-right-shape: superellipse(var(--squircle-amt, 2));
    }
  }"
`;

exports[`squircle.css utilities > squircle-bl-md snapshot 1`] = `
".squircle-bl-md {
    border-bottom-left-radius: var(--radius-md);
    @supports (corner-shape: superellipse(2)) {
      border-bottom-left-radius: calc(var(--radius-md) * (1 - pow(2, -0.5)) / (1 - pow(2, -1 * pow(2, -1 * var(--squircle-amt, 2)))));
      corner-bottom-left-shape: superellipse(var(--squircle-amt, 2));
    }
  }"
`;

exports[`squircle.css utilities > squircle-br-md snapshot 1`] = `
".squircle-br-md {
    border-bottom-right-radius: var(--radius-md);
    @supports (corner-shape: superellipse(2)) {
      border-bottom-right-radius: calc(var(--radius-md) * (1 - pow(2, -0.5)) / (1 - pow(2, -1 * pow(2, -1 * var(--squircle-amt, 2)))));
      corner-bottom-right-shape: superellipse(var(--squircle-amt, 2));
    }
  }"
`;

exports[`squircle.css utilities > squircle-e-md snapshot 1`] = `
".squircle-e-md {
    border-start-end-radius: var(--radius-md);
    border-end-end-radius: var(--radius-md);
    @supports (corner-shape: superellipse(2)) {
      --squircle-r: calc(var(--radius-md) * (1 - pow(2, -0.5)) / (1 - pow(2, -1 * pow(2, -1 * var(--squircle-amt, 2)))));
      border-start-end-radius: var(--squircle-r);
      border-end-end-radius: var(--squircle-r);
      corner-start-end-shape: superellipse(var(--squircle-amt, 2));
      corner-end-end-shape: superellipse(var(--squircle-amt, 2));
    }
  }"
`;

exports[`squircle.css utilities > squircle-ee-md snapshot 1`] = `
".squircle-ee-md {
    border-end-end-radius: var(--radius-md);
    @supports (corner-shape: superellipse(2)) {
      border-end-end-radius: calc(var(--radius-md) * (1 - pow(2, -0.5)) / (1 - pow(2, -1 * pow(2, -1 * var(--squircle-amt, 2)))));
      corner-end-end-shape: superellipse(var(--squircle-amt, 2));
    }
  }"
`;

exports[`squircle.css utilities > squircle-es-md snapshot 1`] = `
".squircle-es-md {
    border-end-start-radius: var(--radius-md);
    @supports (corner-shape: superellipse(2)) {
      border-end-start-radius: calc(var(--radius-md) * (1 - pow(2, -0.5)) / (1 - pow(2, -1 * pow(2, -1 * var(--squircle-amt, 2)))));
      corner-end-start-shape: superellipse(var(--squircle-amt, 2));
    }
  }"
`;

exports[`squircle.css utilities > squircle-l-md snapshot 1`] = `
".squircle-l-md {
    border-top-left-radius: var(--radius-md);
    border-bottom-left-radius: var(--radius-md);
    @supports (corner-shape: superellipse(2)) {
      --squircle-r: calc(var(--radius-md) * (1 - pow(2, -0.5)) / (1 - pow(2, -1 * pow(2, -1 * var(--squircle-amt, 2)))));
      border-top-left-radius: var(--squircle-r);
      border-bottom-left-radius: var(--squircle-r);
      corner-top-left-shape: superellipse(var(--squircle-amt, 2));
      corner-bottom-left-shape: superellipse(var(--squircle-amt, 2));
    }
  }"
`;

exports[`squircle.css utilities > squircle-md snapshot 1`] = `
".squircle-md {
    border-radius: var(--radius-md);
    @supports (corner-shape: superellipse(2)) {
      --squircle-r: calc(var(--radius-md) * (1 - pow(2, -0.5)) / (1 - pow(2, -1 * pow(2, -1 * var(--squircle-amt, 2)))));
      border-radius: var(--squircle-r);
      corner-shape: superellipse(var(--squircle-amt, 2));
    }
  }"
`;

exports[`squircle.css utilities > squircle-r-md snapshot 1`] = `
".squircle-r-md {
    border-top-right-radius: var(--radius-md);
    border-bottom-right-radius: var(--radius-md);
    @supports (corner-shape: superellipse(2)) {
      --squircle-r: calc(var(--radius-md) * (1 - pow(2, -0.5)) / (1 - pow(2, -1 * pow(2, -1 * var(--squircle-amt, 2)))));
      border-top-right-radius: var(--squircle-r);
      border-bottom-right-radius: var(--squircle-r);
      corner-top-right-shape: superellipse(var(--squircle-amt, 2));
      corner-bottom-right-shape: superellipse(var(--squircle-amt, 2));
    }
  }"
`;

exports[`squircle.css utilities > squircle-s-md snapshot 1`] = `
".squircle-s-md {
    border-start-start-radius: var(--radius-md);
    border-end-start-radius: var(--radius-md);
    @supports (corner-shape: superellipse(2)) {
      --squircle-r: calc(var(--radius-md) * (1 - pow(2, -0.5)) / (1 - pow(2, -1 * pow(2, -1 * var(--squircle-amt, 2)))));
      border-start-start-radius: var(--squircle-r);
      border-end-start-radius: var(--squircle-r);
      corner-start-start-shape: superellipse(var(--squircle-amt, 2));
      corner-end-start-shape: superellipse(var(--squircle-amt, 2));
    }
  }"
`;

exports[`squircle.css utilities > squircle-se-md snapshot 1`] = `
".squircle-se-md {
    border-start-end-radius: var(--radius-md);
    @supports (corner-shape: superellipse(2)) {
      border-start-end-radius: calc(var(--radius-md) * (1 - pow(2, -0.5)) / (1 - pow(2, -1 * pow(2, -1 * var(--squircle-amt, 2)))));
      corner-start-end-shape: superellipse(var(--squircle-amt, 2));
    }
  }"
`;

exports[`squircle.css utilities > squircle-ss-md snapshot 1`] = `
".squircle-ss-md {
    border-start-start-radius: var(--radius-md);
    @supports (corner-shape: superellipse(2)) {
      border-start-start-radius: calc(var(--radius-md) * (1 - pow(2, -0.5)) / (1 - pow(2, -1 * pow(2, -1 * var(--squircle-amt, 2)))));
      corner-start-start-shape: superellipse(var(--squircle-amt, 2));
    }
  }"
`;

exports[`squircle.css utilities > squircle-t-md snapshot 1`] = `
".squircle-t-md {
    border-top-left-radius: var(--radius-md);
    border-top-right-radius: var(--radius-md);
    @supports (corner-shape: superellipse(2)) {
      --squircle-r: calc(var(--radius-md) * (1 - pow(2, -0.5)) / (1 - pow(2, -1 * pow(2, -1 * var(--squircle-amt, 2)))));
      border-top-left-radius: var(--squircle-r);
      border-top-right-radius: var(--squircle-r);
      corner-top-left-shape: superellipse(var(--squircle-amt, 2));
      corner-top-right-shape: superellipse(var(--squircle-amt, 2));
    }
  }"
`;

exports[`squircle.css utilities > squircle-tl-md snapshot 1`] = `
".squircle-tl-md {
    border-top-left-radius: var(--radius-md);
    @supports (corner-shape: superellipse(2)) {
      border-top-left-radius: calc(var(--radius-md) * (1 - pow(2, -0.5)) / (1 - pow(2, -1 * pow(2, -1 * var(--squircle-amt, 2)))));
      corner-top-left-shape: superellipse(var(--squircle-amt, 2));
    }
  }"
`;

exports[`squircle.css utilities > squircle-tr-md snapshot 1`] = `
".squircle-tr-md {
    border-top-right-radius: var(--radius-md);
    @supports (corner-shape: superellipse(2)) {
      border-top-right-radius: calc(var(--radius-md) * (1 - pow(2, -0.5)) / (1 - pow(2, -1 * pow(2, -1 * var(--squircle-amt, 2)))));
      corner-top-right-shape: superellipse(var(--squircle-amt, 2));
    }
  }"
`;
